@@ -18,7 +18,7 @@
 
 #ifndef MUSIC_TEMPORAL_HH
 
-#define MAX_BUFFERED_NO_VALUE 0
+#define MAX_BUFFERED_NO_VALUE -1
 #define DEFAULT_PACKET_SIZE 64000
 #define EVENT_FREQUENCY_ESTIMATE 10.0
 
